--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~8.1.3",
     "@angular/compiler": "~8.1.3",
     "@angular/core": "^8.1.3",
+    "@angular/fire": "^5.2.3",
     "@angular/forms": "~8.1.3",
     "@angular/material": "^8.1.1",
     "@angular/platform-browser": "~8.1.3",
@@ -26,6 +27,7 @@
     "@angular/service-worker": "^8.1.3",
     "chance": "^1.0.18",
     "core-js": "^2.5.4",
+    "firebase": "^7.6.0",
     "hammerjs": "^2.0.8",
     "ngx-take-until-destroy": "^5.4.0",
     "normalize.css": "^8.0.1",
