--- a/package.json
+++ b/package.json
@@ -11,46 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.801.2",
-    "@angular/animations": "^8.1.3",
-    "@angular/cdk": "^8.1.1",
+    "@angular-devkit/build-angular": "^0.801.3",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.1.3",
     "@angular/compiler": "~8.1.3",
-    "@angular/core": "^8.1.3",
-    "@angular/fire": "^5.2.3",
+    "@angular/core": "^8.2.14",
+    "@angular/fire": "^5.3.0",
     "@angular/forms": "~8.1.3",
-    "@angular/material": "^8.1.1",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
-    "@angular/pwa": "^0.801.2",
+    "@angular/pwa": "^0.801.3",
     "@angular/router": "~8.1.3",
-    "@angular/service-worker": "^8.1.3",
-    "chance": "^1.0.18",
-    "core-js": "^2.5.4",
-    "firebase": "^7.6.0",
+    "@angular/service-worker": "^8.2.14",
+    "chance": "^1.1.4",
+    "core-js": "^2.6.11",
+    "firebase": "^7.7.0",
     "hammerjs": "^2.0.8",
     "ngx-take-until-destroy": "^5.4.0",
     "normalize.css": "^8.0.1",
-    "rxjs": "~6.5.2",
+    "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "~8.1.2",
+    "@angular/cli": "^8.1.3",
     "@angular/compiler-cli": "~8.1.3",
     "@angular/language-service": "~8.1.3",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "prettier": "1.18.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
