--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.6.11",
     "firebase": "^7.7.0",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.15",
     "ngx-take-until-destroy": "^5.4.0",
     "normalize.css": "^8.0.1",
     "rxjs": "^6.5.4",
@@ -41,6 +42,7 @@
     "@angular/language-service": "~8.1.3",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
+    "@types/lodash": "^4.14.149",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
